make scrollbar track transparent to fix cut-off dates in chatlistitems

--- a/packages/frontend/scss/_global.scss
+++ b/packages/frontend/scss/_global.scss
@@ -92,7 +92,7 @@ button:focus:not(:focus-visible) {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--scrollbarThumb) var(--globalBackground);
+  scrollbar-color: var(--scrollbarThumb) transparent;
 }
 
 ::-webkit-scrollbar {
